src/objects/n2de__Tag_weighting__c.object
<CustomObject>
    <fields>
        <fullName>n2de__Tag_value__c</fullName>
        <label>Distributor Tag Value</label>
        <referenceTo>n2de__Tag_Value__c</referenceTo>
        <relationshipLabel>Distribution tag weightings</relationshipLabel>
        <relationshipName>Tag_weightings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>n2de__Tag_weighting_pattern__c</fullName>
        <label>Distribution tag weighting pattern</label>
        <referenceTo>n2de__Tag_weighting_pattern__c</referenceTo>
        <relationshipLabel>Distribution tag weightings</relationshipLabel>
        <relationshipName>Tag_weightings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>n2de__Weighting_value__c</fullName>
        <label>Weighting value</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Distribution tag weighting</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution tag weightings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>